--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,3 @@
-
 #tabla{
     width: 100%;
     border-collapse: collapse;
@@ -11,6 +10,10 @@
 }
 th, td{
     padding: 0.5%;
+    text-align: left;
+}
+#id{
+    visibility: hidden;
 }
 
 #divForm{
@@ -29,7 +32,15 @@ th, td{
     background-color: green;
     color: white;
 }
-
+#btnEliminar {
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-top: 2%;
+    padding-bottom: 2% ;
+    border-radius: 10px;
+    background-color: red;
+    color: white;
+}
 tbody tr:nth-child(odd){
     background: #dfbbbb;
     color: black;
@@ -45,6 +56,9 @@ tbody tr:nth-child(even){
 label{
     font-weight: bold;
 }
+input{
+    border-color: black;
+}
 #btnMas{
     position: relative;
     float:right;
@@ -57,3 +71,46 @@ label{
     font-size: 20px;
     
 }
+
+*,*:after, *:before{
+    margin: 0;
+    padding: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+#contenedor_spinner{
+    visibility: hidden;
+    background-color: rgba(250, 240, 245, 0.9);
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -webkit-transition: all 1s ease;
+    z-index: 10000;
+}
+
+#spinner{
+    border: 15px solid #ccc;
+    border-top-color: #F4266A;
+    border-top-style: groove;
+    height: 100px;
+    width: 100px;
+    border-radius: 100%;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    -webkit-animation: girar 1.5s linear infinite;
+    -0-animation: girar 1.5s linear infinite;
+
+}
+@keyframes girar{
+    from{transform: rotate(0deg);}
+    to{transform: rotate(360deg);}
+}
+
